# trainspotting

./: Cargo.toml  EnumeratePlans.hs  GraphParser.hs  GridSolver.hs  GridVis.hs  InputToSim.hs  LinespeedTrivial.hs  Makefile  NodeParser.hs  Plan.hs  PlanWithAuthority.hs  README.md  RailPerfCheck.hs  RoutePlan.hs  Segment.hs  TestA.graph  TestDrive.hs  TrainPlan.hs  grid.hs  input-example-1  input-example-1-new  input-example-2  run.sh
docbook/: Makefile  book.toml  railview.css
docs/: .gitignore  Makefile  performance.sh  railview.css
draw_performance/: README.md  convert.sh  performance-2019-03-05-lp.txt  performance-2019-03-05-withlogging.txt  performance-2019-03-05.txt  performance.sh
genmodel/: Cargo.toml
gridvis/: GridVis.hs
haskelltest/: Makefile  Test.hs
inputs/: Infrastructure.hs  Parser.hs  ScreenCoords.hs  UsagePattern.hs  traintypes.json
levelbasedsatplus/: Main.hs  Output.hs
livehtml/: Cargo.toml  index.html
milelang/: Cargo.toml  README.md
milelang/src/: ast.rs  export.rs  grammar.lalrpop  lib.rs  main.rs  railway.rs
planner/: Cargo.toml
rail-layout-gridbased/: Front.hs  FrontOrder.hs  FrontOrderBackup.hs  FrontOrderImport.hs  Rail.hs  Thing.hs  ThingBackup.hs
railcomplete-playback/: twotrack-session-2018-10-15.json
railml2dgraph/: Cargo.toml
railperfcheck/: Makefile  RailPerfCheck.hs
rolling/: Cargo.toml  Makefile  README.md
rollingrailml/: Makefile
src/: dgraph.rs  dispatch.rs  driver.rs  dynamics.rs  ffi.rs  history.rs  infrastructure.rs  lib.rs  main.rs  observable.rs  parser.rs  parser_utils.rs  parsetest.rs  route.rs  (+8 more)
(+280 files in other folders)
